crystal-facet-uml (1.27.3) UNRELEASED; urgency=medium

  [ Andreas Warnke ]
  * fixed most metainfo.xml warnings 
  * build target for gcov measurement added
  * auto-delete relationships between classifiers that have no common diagram
  * when opening the second database, view switches back to navigation mode
  * when opening the second database, search entry field is cleared
  * search result view is updated when changing the database (e.g. by undo)
  * search result view stays when database update is triggered by a 2nd window

-- Andreas Warnke <cfu@andreaswarnke.de>  Sun, 06 Feb 2021 15:00:00 +0100

crystal-facet-uml (1.27.2) UNRELEASED; urgency=medium

  [ Andreas Warnke ]
  * compiler switch Werror removed; warnings should not cause build-breaks

 -- Andreas Warnke <cfu@andreaswarnke.de>  Sun, 03 Jan 2021 15:00:00 +0100

crystal-facet-uml (1.27.1) UNRELEASED; urgency=medium

  [ Andreas Warnke ]
  * compiler warning fixed: conversions from unsigned int to size_t explicit

 -- Andreas Warnke <cfu@andreaswarnke.de>  Sun, 03 Jan 2021 09:00:00 +0100

crystal-facet-uml (1.27.0) UNRELEASED; urgency=medium

  [ Andreas Warnke ]
  * Tx/Rx for component ports and activity pins introduced
  * control flow pseudostate for state entry and state exit added
  * risk of nullpointer errors reduced when opening new db with old program
  * test case added to check for upwards compatibility of types at xmi export
  * XMI Export: use cases have uml:ExtensionPoints now
  * XMI Export: Requirement property base_Class renamed to base_NamedElement
  * notifying user if trying to change a read-only database file
  * in create mode, the mouse-tip-icon changes depending on users options
  * redesign of marker-icons for focused and selected elements

 -- Andreas Warnke <cfu@andreaswarnke.de>  Sat, 02 Jan 2021 19:00:00 +0100

crystal-facet-uml (1.26.1) UNRELEASED; urgency=medium

  [ Andreas Warnke ]
  * XMI Export: destination end of messages had fix enclosingInteraction=90001