@@ -12,10 +12,8 @@ static inline data_diagram_t *gui_sketch_area_get_focused_diagram_ptr ( gui_sket
 
 static inline data_row_id_t gui_sketch_area_get_focused_diagram_id ( gui_sketch_area_t *this_ )
 {
-    data_row_id_t focused_diagram_id;
-    data_diagram_t *focused_diag;
-    focused_diag = gui_sketch_area_get_focused_diagram_ptr( this_ );
-    focused_diagram_id = data_diagram_get_row_id( focused_diag );
+    const data_diagram_t *focused_diag = gui_sketch_area_get_focused_diagram_ptr( this_ );
+    const data_row_id_t focused_diagram_id = data_diagram_get_row_id( focused_diag );
     return focused_diagram_id;
 }
 
@@ -36,19 +34,57 @@ static inline data_id_t gui_sketch_area_get_diagram_id_at_pos ( gui_sketch_area_
 
     for ( int idx = 0; idx < (*this_).card_num; idx ++ )
     {
-        gui_sketch_card_t *card;
-        card = &((*this_).cards[idx]);
-        shape_int_rectangle_t card_bounds;
-        card_bounds = gui_sketch_card_get_bounds( card );
+        const gui_sketch_card_t *card = &((*this_).cards[idx]);
+        const shape_int_rectangle_t card_bounds = gui_sketch_card_get_bounds( card );
         if ( shape_int_rectangle_contains( &card_bounds, x, y ) )
         {
-            data_diagram_t *selected_diag;
-            selected_diag = gui_sketch_card_get_diagram_ptr( card );
+            const data_diagram_t *selected_diag
+                = gui_sketch_card_get_diagram_const( card );
             data_id_reinit( &result, DATA_TABLE_DIAGRAM, data_diagram_get_row_id( selected_diag ) );
             break;
         }
     }
     return result;
+}
+
+static inline void gui_sketch_area_get_diagram_and_object_id_at_pos ( gui_sketch_area_t *this_, 
+                                                                      int32_t x, 
+                                                                      int32_t y,
+                                                                      data_id_t* out_diagram_id,
+                                                                      data_id_t* out_object_id )
+{
+    assert( NULL != out_diagram_id );
+    assert( NULL != out_object_id );
+    assert( (*this_).card_num <= GUI_SKETCH_AREA_CONST_MAX_CARDS );
+    data_id_reinit_void( out_diagram_id );
+    data_id_reinit_void( out_object_id );
+
+    if ( gui_sketch_nav_tree_is_visible( &((*this_).nav_tree) ) )
+    {
+        gui_sketch_nav_tree_get_object_id_at_pos( &((*this_).nav_tree), x, y, out_diagram_id );
+    }
+    else if ( gui_sketch_result_list_is_visible( &((*this_).result_list) ) )
+    {
+        gui_sketch_result_list_get_object_id_at_pos ( &((*this_).result_list), 
+                                                      x,
+                                                      y, 
+                                                      out_object_id,  /* = out_selected_id */
+                                                      out_diagram_id  /* = out_diagram_id */
+                                                    );
+    }
+
+    for ( int idx = 0; idx < (*this_).card_num; idx ++ )
+    {
+        const gui_sketch_card_t *card = &((*this_).cards[idx]);
+        const shape_int_rectangle_t card_bounds = gui_sketch_card_get_bounds( card );
+        if ( shape_int_rectangle_contains( &card_bounds, x, y ) )
+        {
+            const data_diagram_t *selected_diag
+                 = gui_sketch_card_get_diagram_const( card );
+            data_id_reinit( out_diagram_id, DATA_TABLE_DIAGRAM, data_diagram_get_row_id( selected_diag ) );
+            break;
+        }
+    }
 }
 
 static inline void gui_sketch_area_private_get_object_id_at_pos ( gui_sketch_area_t *this_,
@@ -59,18 +95,16 @@ static inline void gui_sketch_area_private_get_object_id_at_pos ( gui_sketch_are
 {
     assert( (*this_).card_num <= GUI_SKETCH_AREA_CONST_MAX_CARDS );
     assert( NULL != out_selected_id );
-    data_id_pair_init_void( out_selected_id );
+    data_id_pair_reinit_void( out_selected_id );
 
     for ( int idx = 0; idx < (*this_).card_num; idx ++ )
     {
-        gui_sketch_card_t *card;
-        card = &((*this_).cards[idx]);
-        shape_int_rectangle_t card_bounds;
-        card_bounds = gui_sketch_card_get_bounds( card );
+        const gui_sketch_card_t *card = &((*this_).cards[idx]);
+        const shape_int_rectangle_t card_bounds = gui_sketch_card_get_bounds( card );
         if ( shape_int_rectangle_contains( &card_bounds, x, y ) )
         {
-            data_id_pair_t out_surrounding_id;  /* dummy */
-            gui_sketch_card_get_object_id_at_pos ( card, x, y, filter, out_selected_id, &out_surrounding_id );
+            data_id_pair_t surrounding_id;  /* dummy */
+            gui_sketch_card_get_object_id_at_pos ( card, x, y, filter, out_selected_id, &surrounding_id );
             break;
         }
     }
@@ -91,10 +125,8 @@ static inline void gui_sketch_area_private_get_object_ids_at_pos ( gui_sketch_ar
 
     for ( int idx = 0; idx < (*this_).card_num; idx ++ )
     {
-        gui_sketch_card_t *card;
-        card = &((*this_).cards[idx]);
-        shape_int_rectangle_t card_bounds;
-        card_bounds = gui_sketch_card_get_bounds( card );
+        const gui_sketch_card_t *card = &((*this_).cards[idx]);
+        const shape_int_rectangle_t card_bounds = gui_sketch_card_get_bounds( card );
         if ( shape_int_rectangle_contains( &card_bounds, x, y ) )
         {
             gui_sketch_card_get_object_id_at_pos ( card, x, y, filter, out_selected_id, out_surrounding_id );
@@ -110,10 +142,8 @@ static inline gui_sketch_card_t *gui_sketch_area_get_card_at_pos ( gui_sketch_ar
 
     for ( int idx = 0; idx < (*this_).card_num; idx ++ )
     {
-        gui_sketch_card_t *card;
-        card = &((*this_).cards[idx]);
-        shape_int_rectangle_t card_bounds;
-        card_bounds = gui_sketch_card_get_bounds( card );
+        gui_sketch_card_t *card = &((*this_).cards[idx]);
+        const shape_int_rectangle_t card_bounds = gui_sketch_card_get_bounds( card );
         if ( shape_int_rectangle_contains( &card_bounds, x, y ) )
         {
             result = card;
